--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,8 @@
 /* =================================
   Base Element Styles
 ==================================== */
+/* testing hello edits */
+
 body {
   font-family: 'Helvetica', sans-serif;
   font-size: 1.3em;
